--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta property="og:title" content="The Rock" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://github.com/angelherdora/" />
-    <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="https://poweritems.com.mx/resources/uploads/images/notes/6ef7ccd6b59baa8ee01d23fef4ae452a.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:description" content="test nuevos" />
 
   </head>
+  <body></body>
 </html>
