--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>The Rock (1996)</title>
     <meta property="og:title" content="The Rock" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://github.com/angelherdora/" />
+    <meta property="og:url" content="https://angelherdora.github.io/" />
     <meta property="og:image" content="https://poweritems.com.mx/resources/uploads/images/notes/6ef7ccd6b59baa8ee01d23fef4ae452a.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:description" content="test nuevos" />
